test/1.1.0/doc-core/libcore_marker_rs_0000.rs
fn main() {
    #[derive(Debug)]
    struct Foo;
    
    let x = Foo;
    
    let y = x;
    
    // `x` has moved into `y`, and so cannot be used
    
    // println!("{:?}", x); // error: use of moved value
}
